--- a/Scripts/HotfixView/ET.HotfixView.asmdef
+++ b/Scripts/HotfixView/ET.HotfixView.asmdef
@@ -12,7 +12,8 @@
         "YooAsset",
         "ET.YooAssets",
         "ET.UI",
-        "ET.ReferenceCollector"
+        "ET.ReferenceCollector",
+        "ET.Init"
     ],
     "includePlatforms": [
         "Editor"
