--- a/Scripts/ModelView/ET.ModelView.asmdef
+++ b/Scripts/ModelView/ET.ModelView.asmdef
@@ -8,6 +8,7 @@
         "ET.Model",
         "YooAsset",
         "ET.UI",
+        "ET.Init",
         "ET.ReferenceCollector"
     ],
     "includePlatforms": [
