--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "relatedPackages": {},
   "gitDependencies": {
+    "cn.etetet.actorlocation": "https://github.com/ET-Packages/cn.etetet.actorlocation.git#0.0.1",
     "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1",
     "cn.etetet.yooassets": "https://github.com/ET-Packages/cn.etetet.yooassets.git#0.0.1",
     "cn.etetet.loader": "https://github.com/ET-Packages/cn.etetet.loader.git#0.0.1",
