修复app.csproj工程引用model路径问题

--- a/DotNet~/App/ET.App.csproj
+++ b/DotNet~/App/ET.App.csproj
@@ -32,6 +32,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\cn.etetet.statesync\DotNet~\Model\ET.Model.csproj" />
+    <ProjectReference Include="..\Model\ET.Model.csproj" />
   </ItemGroup>
 </Project>
