4个工程不能放到Scripts目录下，不能跟Scripts混在一起，否则切换成Client，仍然会包含Server代码

--- a/Runtime/HotfixView/ET.HotfixView.asmdef
+++ b/Runtime/HotfixView/ET.HotfixView.asmdef
@@ -10,10 +10,10 @@
         "ET.Hotfix",
         "ET.ModelView",
         "YooAsset",
+        "ET.Init",
         "ET.YooAssets",
         "ET.UI",
-        "ET.ReferenceCollector",
-        "ET.Init"
+        "ET.ReferenceCollector"
     ],
     "includePlatforms": [
         "Editor"
