--- a/Runtime/ModelView/ET.ModelView.asmdef
+++ b/Runtime/ModelView/ET.ModelView.asmdef
@@ -20,7 +20,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "INITED"
+    ],
     "versionDefines": [],
     "noEngineReferences": false,
     "optionalUnityReferences": [],
