asmdef.txt挪到packagegit.json中

--- a/Runtime/Hotfix/ET.Hotfix.asmdef
+++ b/Runtime/Hotfix/ET.Hotfix.asmdef
@@ -7,8 +7,8 @@
         "MemoryPack",
         "ET.Model",
         "ET.SourceGeneratorAttribute",
-        "ET.Recast",
-        "ET.Loader"
+        "ET.Loader",
+        "ET.Recast"
     ],
     "includePlatforms": [
         "Editor"
