--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cn.etetet.statesync",
   "displayName": "ET.StateSync",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "unity": "2022.3",
   "description": "et statesync",
   "author": {
@@ -14,8 +14,8 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "cn.etetet.actorlocation": "0.0.2",
-    "cn.etetet.core": "0.0.9",
+    "cn.etetet.actorlocation": "0.0.3",
+    "cn.etetet.core": "0.0.10",
     "cn.etetet.yooassets": "0.0.2",
     "cn.etetet.loader": "0.0.4",
     "cn.etetet.demores": "0.0.1",
@@ -32,10 +32,10 @@
     "cn.etetet.aoi": "0.0.1",
     "cn.etetet.ui": "0.0.2",
     "cn.etetet.referencecollector": "0.0.1",
-    "cn.etetet.login": "0.0.1"
+    "cn.etetet.login": "0.0.1",
+    "cn.etetet.netinner": "0.0.1"
   },
-  "publishConfig": 
-  { 
-    "registry": "https://npm.pkg.github.com/@ET-Packages" 
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@ET-Packages"
   }
 }
