--- a/Runtime/Model/ET.Model.asmdef
+++ b/Runtime/Model/ET.Model.asmdef
@@ -3,10 +3,10 @@
     "rootNamespace": "ET",
     "references": [
         "ET.Core",
-        "Unity.Mathematics",
-        "MemoryPack",
+        "ET.Recast",
         "ET.SourceGeneratorAttribute",
-        "ET.Recast"
+        "MemoryPack",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
