--- a/Runtime/Hotfix/ET.Hotfix.asmdef
+++ b/Runtime/Hotfix/ET.Hotfix.asmdef
@@ -3,12 +3,12 @@
     "rootNamespace": "ET",
     "references": [
         "ET.Core",
-        "Unity.Mathematics",
-        "MemoryPack",
-        "ET.Model",
-        "ET.SourceGeneratorAttribute",
         "ET.Loader",
-        "ET.Recast"
+        "ET.Model",
+        "ET.Recast",
+        "ET.SourceGeneratorAttribute",
+        "MemoryPack",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
