--- a/Runtime/ModelView/ET.ModelView.asmdef
+++ b/Runtime/ModelView/ET.ModelView.asmdef
@@ -3,14 +3,14 @@
     "rootNamespace": "ET",
     "references": [
         "ET.Core",
-        "Unity.Mathematics",
+        "ET.Init",
         "ET.Loader",
         "ET.Model",
-        "YooAsset",
+        "ET.ReferenceCollector",
         "ET.SourceGeneratorAttribute",
-        "ET.Init",
         "ET.UI",
-        "ET.ReferenceCollector"
+        "Unity.Mathematics",
+        "YooAsset"
     ],
     "includePlatforms": [
         "Editor"
