--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cn.etetet.statesync",
   "displayName": "ET.StateSync",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "unity": "2022.3",
   "description": "et statesync",
   "author": {
@@ -14,10 +14,10 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "cn.etetet.actorlocation": "0.0.4",
-    "cn.etetet.core": "0.0.12",
+    "cn.etetet.actorlocation": "0.0.5",
+    "cn.etetet.core": "0.0.13",
     "cn.etetet.yooassets": "0.0.2",
-    "cn.etetet.loader": "0.0.7",
+    "cn.etetet.loader": "0.0.8",
     "cn.etetet.demores": "0.0.1",
     "cn.etetet.mathematics": "0.0.1",
     "cn.etetet.router": "0.0.1",
@@ -33,7 +33,8 @@
     "cn.etetet.ui": "0.0.2",
     "cn.etetet.referencecollector": "0.0.1",
     "cn.etetet.login": "0.0.1",
-    "cn.etetet.netinner": "0.0.2"
+    "cn.etetet.netinner": "0.0.2",
+    "cn.etetet.hybridclr": "0.0.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ET-Packages"
