--- a/Runtime/HotfixView/ET.HotfixView.asmdef
+++ b/Runtime/HotfixView/ET.HotfixView.asmdef
@@ -6,13 +6,13 @@
         "ET.Hotfix",
         "ET.Init",
         "ET.Loader",
+        "ET.MemoryPack",
         "ET.Model",
         "ET.ModelView",
         "ET.ReferenceCollector",
         "ET.SourceGeneratorAttribute",
         "ET.UI",
         "ET.YooAssets",
-        "MemoryPack",
         "Unity.Mathematics",
         "YooAsset"
     ],
