修复引用，yooasset hybridclr改成了包模式

--- a/Runtime/ModelView/ET.ModelView.asmdef
+++ b/Runtime/ModelView/ET.ModelView.asmdef
@@ -3,14 +3,13 @@
     "rootNamespace": "ET",
     "references": [
         "ET.Core",
-        "ET.Init",
         "ET.Loader",
         "ET.Model",
         "ET.ReferenceCollector",
         "ET.SourceGeneratorAttribute",
         "ET.UI",
         "Unity.Mathematics",
-        "YooAsset"
+        "ET.YooAssets"
     ],
     "includePlatforms": [
         "Editor"
@@ -24,8 +23,5 @@
         "INITED"
     ],
     "versionDefines": [],
-    "noEngineReferences": false,
-    "optionalUnityReferences": [],
-    "additionalReferences": [],
-    "compilerOptions": ""
+    "noEngineReferences": false
 }
