--- a/Runtime/HotfixView/ET.HotfixView.asmdef
+++ b/Runtime/HotfixView/ET.HotfixView.asmdef
@@ -4,7 +4,6 @@
     "references": [
         "ET.Core",
         "ET.Hotfix",
-        "ET.Init",
         "ET.Loader",
         "ET.MemoryPack",
         "ET.Model",
@@ -13,8 +12,7 @@
         "ET.SourceGeneratorAttribute",
         "ET.UI",
         "ET.YooAssets",
-        "Unity.Mathematics",
-        "YooAsset"
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
@@ -28,8 +26,5 @@
         "INITED"
     ],
     "versionDefines": [],
-    "noEngineReferences": false,
-    "optionalUnityReferences": [],
-    "additionalReferences": [],
-    "compilerOptions": ""
+    "noEngineReferences": false
 }
