加上ai机器人

--- a/DotNet~/Hotfix/ET.Hotfix.csproj
+++ b/DotNet~/Hotfix/ET.Hotfix.csproj
@@ -33,6 +33,10 @@
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
+        <Compile Include="$(SolutionDir)Packages\cn.etetet.*\Scripts\Hotfix\Client\**\*.cs">
+            <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
+        </Compile>
+
         <Compile Include="$(SolutionDir)Packages\cn.etetet.*\CodeMode\Hotfix\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
