--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cn.etetet.statesync",
   "displayName": "ET.StateSync",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "unity": "2022.3",
   "description": "et statesync",
   "author": {
@@ -16,7 +16,7 @@
   "dependencies": {
     "cn.etetet.packagemanager": "0.0.7",
     "cn.etetet.actorlocation": "0.0.7",
-    "cn.etetet.core": "0.0.17",
+    "cn.etetet.core": "0.0.18",
     "cn.etetet.loader": "0.0.19",
     "cn.etetet.demores": "0.0.1",
     "cn.etetet.mathematics": "0.0.1",
@@ -36,7 +36,8 @@
     "cn.etetet.netinner": "0.0.3",
     "cn.etetet.hybridclr": "6.4.0",
     "cn.etetet.excel": "0.0.5",
-    "cn.etetet.proto": "0.0.6"
+    "cn.etetet.proto": "0.0.6",
+    "cn.etetet.ai": "0.0.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ET-Packages"
