--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cn.etetet.statesync",
   "displayName": "ET.StateSync",
-  "version": "0.0.46",
+  "version": "0.0.47",
   "unity": "2022.3",
-  "description": "et statesync",
+  "description": "状态同步demo",
   "author": {
     "name": "tanghai",
     "url": "https://github.com/egametang/ET"
@@ -14,30 +14,30 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "cn.etetet.packagemanager": "0.0.7",
-    "cn.etetet.actorlocation": "0.0.7",
-    "cn.etetet.core": "0.0.18",
-    "cn.etetet.loader": "0.0.19",
-    "cn.etetet.demores": "0.0.1",
-    "cn.etetet.mathematics": "0.0.1",
-    "cn.etetet.router": "0.0.1",
-    "cn.etetet.console": "0.0.1",
-    "cn.etetet.unit": "0.0.2",
-    "cn.etetet.http": "0.0.1",
-    "cn.etetet.recast": "0.0.2",
-    "cn.etetet.numeric": "0.0.2",
-    "cn.etetet.move": "0.0.2",
-    "cn.etetet.watcher": "0.0.1",
-    "cn.etetet.db": "0.0.1",
-    "cn.etetet.aoi": "0.0.1",
-    "cn.etetet.ui": "0.0.2",
-    "cn.etetet.referencecollector": "0.0.1",
-    "cn.etetet.login": "0.0.1",
-    "cn.etetet.netinner": "0.0.3",
+    "cn.etetet.packagemanager": "0.0.9",
+    "cn.etetet.actorlocation": "0.0.8",
+    "cn.etetet.core": "0.0.19",
+    "cn.etetet.loader": "0.0.20",
+    "cn.etetet.demores": "0.0.2",
+    "cn.etetet.mathematics": "0.0.2",
+    "cn.etetet.router": "0.0.2",
+    "cn.etetet.console": "0.0.2",
+    "cn.etetet.unit": "0.0.3",
+    "cn.etetet.http": "0.0.2",
+    "cn.etetet.recast": "0.0.3",
+    "cn.etetet.numeric": "0.0.3",
+    "cn.etetet.move": "0.0.3",
+    "cn.etetet.watcher": "0.0.2",
+    "cn.etetet.db": "0.0.2",
+    "cn.etetet.aoi": "0.0.2",
+    "cn.etetet.ui": "0.0.3",
+    "cn.etetet.referencecollector": "0.0.3",
+    "cn.etetet.login": "0.0.2",
+    "cn.etetet.netinner": "0.0.4",
     "cn.etetet.hybridclr": "6.4.0",
-    "cn.etetet.excel": "0.0.5",
-    "cn.etetet.proto": "0.0.6",
-    "cn.etetet.ai": "0.0.1"
+    "cn.etetet.excel": "0.0.6",
+    "cn.etetet.proto": "0.0.7",
+    "cn.etetet.ai": "0.0.2"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@ET-Packages"
