--- a/Runtime/HotfixView/ET.HotfixView.asmdef
+++ b/Runtime/HotfixView/ET.HotfixView.asmdef
@@ -13,8 +13,7 @@
         "ET.SourceGeneratorAttribute",
         "ET.UI",
         "ET.YooAssets",
-        "Unity.Mathematics",
-        "YooAsset"
+        "Unity.Mathematics"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
